EXTRA_DIST = \
	build-rules-msvc.mak \
	config-msvc.mak \
	config.h.win32 \
	create-lists.bat \
	create-lists-msvc.mak \
	detectenv-msvc.mak \
	generate-msvc.mak \
	hb-introspection-msvc.mak \
	info-msvc.mak \
	install.mak \
	introspection-msvc.mak \
	Makefile.vc \
	README.txt

-include $(top_srcdir)/git.mk
