[package]
name = "harfbuzz_fontations"
edition = "2021"

[dependencies]
read-fonts = { path = "/home/behdad/fontations/read-fonts" }
skrifa = { path = "/home/behdad/fontations/skrifa" }

[lib]
name = "harfbuzz_fontations"
path = "lib.rs"
crate-type = ["staticlib"]

[profile.debugoptimized]
inherits = "release"
debug = true
