[package]
name = "harfbuzz_fontations"
edition = "2021"

[dependencies]
read-fonts = "0.27.2"
skrifa = "0.28.1"

[lib]
name = "harfbuzz_fontations"
path = "lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.debugoptimized]
inherits = "release"
debug = true
codegen-units = 16
